# recommendation_machine

./: .gitignore  README.md  pyproject.toml  setup.cfg
recsys/: README.md  demo.py  ratings.csv
recsys/recsys/: __init__.py  cli.py  data_exploration.py  data_loader.py  evaluation.py  recommend_user.py  recommended_top.py  utils.py
recsys/tests/: __init__.py  test_top.py  test_user.py
