[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys"
version = "0.1.0"
description = "A simple recommendation engine with top-N and collaborative filtering"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
]

[project.scripts]
recsys = "recsys.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["recsys*"]
