[metadata]
name = recsys
version = 0.1.0
description = A simple recommendation engine with top-N and collaborative filtering
long_description = file: README.md
long_description_content_type = text/markdown
author = Laura Starzomska
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    numpy
    scikit-learn
